# conversation-archive

./: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
convarch/: __init__.py  api.py  cli.py  database.py  export.py  models.py  search.py
convarch/extractors/: __init__.py  content.py
convarch/parsers/: __init__.py  chatgpt.py  claude.py
extension/: background.js  content.js  manifest.json
src/: cli.ts  extractor.ts  importer.ts  index.ts  search.ts  server.ts  storage.ts
tests/: importer.test.ts  test_convarch.py
